# hospital-system

./: .env.example  .gitignore  FEATURE_STATUS.md  README.md  build-demo.ps1  build-demo.sh  docker-compose.demo.yml  docker-compose.yml  package-lock.json  package.json  setup.ps1  setup.sh  stop.sh  turbo.json
.claude/: launch.json  settings.local.json
apps/api/: .env.example  jest.config.ts  package.json  tsconfig.build.json  tsconfig.json  tsconfig.seed.json
apps/api/data/: sms-templates.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: desktop.ts  server.ts
apps/api/src/db/: embedded.ts  schema-sql.ts  schema.sql  seed.ts
apps/api/src/lib/: email.ts  socket.ts  (+1 more)
apps/desktop/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: build-installer.ps1  build-installer.sh  build-sidecar-docker.ps1  prepare-api-sidecar.js
apps/desktop/src/: tauri-bridge.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/installer/windows/: setup.nsi
apps/desktop/src-tauri/src/: lib.rs  main.rs  setup_wizard.rs
apps/patient-portal/: .env.example  Dockerfile  Dockerfile.prod  index.html  package.json  vite.config.ts
apps/patient-portal/src/: App.tsx  main.tsx
apps/web/: .env.example  Dockerfile  Dockerfile.prod  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
docs/: ASSESSMENT.md  SALES.md
nginx/: patient-portal.conf  web.conf
(+332 files in other folders)
